--- a/.github/workflows/dispatch_readme.yml
+++ b/.github/workflows/dispatch_readme.yml
@@ -1,4 +1,4 @@
-name: Dispatch README
+name: Dispatch readme
 
 on:
   repository_dispatch:
@@ -6,13 +6,17 @@ on:
       - dispatch_readme
 
 jobs:
+  get_target_branches:
+    name: Get target branches
+    uses: ./.github/workflows/get_target_branches.yml
   generate:
-    name: Generate README
+    name: Generate readme
+    needs: get_target_branches
     permissions:
       contents: write
     strategy:
       matrix:
-        target-branch: ${{ fromJSON(vars.TARGET_BRANCHES) }}
+        target-branch: ${{ fromJSON(needs.get_target_branches.outputs.target_branches) }}
     uses: Gakuto1112/FiguraAvatarsReadmeTemplate/.github/workflows/generate_my_figura_avatar_readme.yml@main
     with:
       branch-name: ${{ matrix.target-branch }}
